--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -26,7 +26,7 @@
                         <a href="{% url "users.views.admin_list_activity" %}">Activity</a>
                     </li>
                     <li>
-                        <a href="">Dependence</a>
+                        <a href="{% url "manage.views.dependencies_list" %}">Requirements</a>
                     </li>
                     <li>
                         <a href="">Settings</a>
