Modified dependencies layout

--- a/templates/admin/activity.html
+++ b/templates/admin/activity.html
@@ -28,6 +28,9 @@
                     <li class="active">
                         <a href="{% url "users.views.admin_list_activity" %}">Activity</a>
                     </li>
+                    <li>
+                        <a href="{% url "manage.views.dependencies_list" %}">Requirements</a>
+                    </li>
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane active" id="users">
