--- a/templates/analyses/report/_dashboardAnalysisResult.html
+++ b/templates/analyses/report/_dashboardAnalysisResult.html
@@ -35,7 +35,7 @@
             <td> {% if analysis.report.ela  %} <span class="label label-success">Applicable</span> {% else %} <span class="label label-inverse">Not applicable</span> {% endif %} </td>
         </tr>
         <tr>
-            <td>Singature check</td>
+            <td>Signature check</td>
             <td> {% if analysis.report.signatures and analysis.report.signatures|length > 0  %} <span class="label label-success">Signature matches</span> {% else %} <span class="label label-inverse">No signature match</span> {% endif %} </td>
         </tr>
     </tbody>
