--- a/templates/analyses/cases/_map_image.html
+++ b/templates/analyses/cases/_map_image.html
@@ -21,29 +21,29 @@ function initialize() {
         var contentString = '<div>'+
             '<a href="{% url "analyses.views.show_analysis" image.id %}">' +
             '<h4>' +
-            '{% if image.file_name|length > 20 %}' +
-                '{{ image.file_name|slice:":20" }} ...' +
-            '{% else %}' +
-                '{{ image.file_name }}' +
-            '{% endif %}' +
+            {% if image.file_name|length > 20 %}
+                {{ image.file_name|slice:":20" }} '...' +
+            {% else %}
+                {{ image.file_name }}
+            {% endif %}
             '</h4>' +
             '<img src="{% url "analyses.views.image" image.thumb_id %}" />' +
             '<div class="tags">' +
-                '{% if image.report.signatures|count_severity:"1" %}' +
+                {% if image.report.signatures|count_severity:"1" %}
                     '<span class="label-holder">' +
                         '<span class="label label-success">{{ image.report.signatures|count_severity:"1" }}</span>' +
                     '</span>' +
-                '{% endif %}' +
-                '{% if image.report.signatures|count_severity:"2" %}' +
+                {% endif %}
+                {% if image.report.signatures|count_severity:"2" %}
                     '<span class="label-holder">' +
                         '<span class="label label-warning">{{ image.report.signatures|count_severity:"2" }}</span>' +
                     '</span>' +
-                '{% endif %}' +
-                '{% if image.report.signatures|count_severity:"3" %}' +
+                {% endif %}
+                {% if image.report.signatures|count_severity:"3" %}
                     '<span class="label-holder">' +
                         '<span class="label label-important">{{ image.report.signatures|count_severity:"3" }}</span>' +
                     '</span>' +
-                '{% endif %}' +
+                {% endif %}
             '</div>' +
             '</a>';
 
