--- a/templates/base_index.html
+++ b/templates/base_index.html
@@ -113,16 +113,8 @@
             </div>
         </section>
         <footer class="footer">
-            <div class="subfooter">
-                <div class="container">
-                    <div class="row">
-                        <div class="span6">
-                            <p>
-                                Ghiro 0.2 - &copy; With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="#">burlone</a>.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+            <div class="span6">
+                Ghiro 0.2 - &copy; With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="http://burlone.info" target="_blank">burlone</a>.
             </div>
         </footer>
     </body>
