--- a/templates/analyses/cases/_tbl_case.html
+++ b/templates/analyses/cases/_tbl_case.html
@@ -97,7 +97,7 @@
                 <th>File name</th>
                 <th>Status
                     {% if filtered %}
-                        <a href="{% url "analyses.views.show_case" case.id "list" %}?filter=all" class="tool" title="Show all reports"><i class="icon-eye-close"></i></a></th>
+                        <a href="{% url "analyses.views.show_case" case.id "list" %}" class="tool" title="Show all reports"><i class="icon-eye-close"></i></a></th>
                     {% else %}
                         <a href="{% url "analyses.views.show_case" case.id "list" %}?filter=completed" class="tool" title="Show only completed reports"><i class="icon-eye-open"></i></a></th>
                     {% endif %}
@@ -135,7 +135,11 @@
             {% if tasks.has_previous %}
                 <ul>
                     <li>
-                        <a href="{% url "analyses.views.show_case" case.id "list" %}?page={{ tasks.previous_page_number }}">← Previous</a>
+                        {% if filtered %}
+                            <a href="{% url "analyses.views.show_case" case.id "list" %}?page={{ tasks.previous_page_number }}&filter=completed">← Previous</a>
+                        {% else %}
+                            <a href="{% url "analyses.views.show_case" case.id "list" %}?page={{ tasks.previous_page_number }}">← Previous</a>
+                        {% endif %}
                     </li>
                 </ul>
             {% endif %}
@@ -145,7 +149,11 @@
             {% if tasks.has_next %}
                 <ul>
                     <li>
-                        <a href="{% url "analyses.views.show_case" case.id "list" %}?page={{ tasks.next_page_number }}">Next → </a>
+                        {% if filtered %}
+                            <a href="{% url "analyses.views.show_case" case.id "list" %}?page={{ tasks.next_page_number }}&filter=completed">Next → </a>
+                        {% else %}
+                            <a href="{% url "analyses.views.show_case" case.id "list" %}?page={{ tasks.next_page_number }}">Next → </a>
+                        {% endif %}
                     </li>
                 </ul>
             {% endif %}
@@ -158,7 +166,7 @@
                 <th>File name</th>
                 <th>Status
                     {% if filtered %}
-                        <a href="{% url "analyses.views.show_case" case.id "owned" %}?filter=all" class="tool" title="Show all reports"><i class="icon-eye-close"></i></a></th>
+                        <a href="{% url "analyses.views.show_case" case.id "owned" %}" class="tool" title="Show all reports"><i class="icon-eye-close"></i></a></th>
                     {% else %}
                         <a href="{% url "analyses.views.show_case" case.id "owned" %}?filter=completed" class="tool" title="Show only completed reports"><i class="icon-eye-open"></i></a></th>
                     {% endif %}
@@ -195,7 +203,11 @@
             {% if tasks.has_previous %}
                 <ul>
                     <li>
-                        <a href="{% url "analyses.views.show_case" case.id "owned" %}?page={{ tasks.previous_page_number }}">← Previous</a>
+                        {% if filtered %}
+                            <a href="{% url "analyses.views.show_case" case.id "owned" %}?page={{ tasks.previous_page_number }}&filter=completed">← Previous</a>
+                        {% else %}
+                            <a href="{% url "analyses.views.show_case" case.id "owned" %}?page={{ tasks.previous_page_number }}">← Previous</a>
+                        {% endif %}
                     </li>
                 </ul>
             {% endif %}
@@ -205,7 +217,11 @@
             {% if tasks.has_next %}
                 <ul>
                     <li>
-                        <a href="{% url "analyses.views.show_case" case.id "owned" %}?page={{ tasks.next_page_number }}">Next → </a>
+                        {% if filtered %}
+                            <a href="{% url "analyses.views.show_case" case.id "owned" %}?page={{ tasks.next_page_number }}&filter=completed">Next → </a>
+                        {% else %}
+                            <a href="{% url "analyses.views.show_case" case.id "owned" %}?page={{ tasks.next_page_number }}">Next → </a>
+                        {% endif %}
                     </li>
                 </ul>
             {% endif %}
@@ -218,7 +234,7 @@
                 <th>File name</th>
                 <th>Status
                     {% if filtered %}
-                        <a href="{% url "analyses.views.show_case" case.id "others" %}?filter=all" class="tool" title="Show all reports"><i class="icon-eye-close"></i></a></th>
+                        <a href="{% url "analyses.views.show_case" case.id "others" %}" class="tool" title="Show all reports"><i class="icon-eye-close"></i></a></th>
                     {% else %}
                         <a href="{% url "analyses.views.show_case" case.id "others" %}?filter=completed" class="tool" title="Show only completed reports"><i class="icon-eye-open"></i></a></th>
                     {% endif %}
@@ -257,7 +273,11 @@
             {% if tasks.has_previous %}
                 <ul>
                     <li>
-                        <a href="{% url "analyses.views.show_case" case.id "others" %}?page={{ tasks.previous_page_number }}">← Previous</a>
+                        {% if filtered %}
+                            <a href="{% url "analyses.views.show_case" case.id "others" %}?page={{ tasks.previous_page_number }}&filter=completed">← Previous</a>
+                        {% else %}
+                            <a href="{% url "analyses.views.show_case" case.id "others" %}?page={{ tasks.previous_page_number }}">← Previous</a>
+                        {% endif %}
                     </li>
                 </ul>
             {% endif %}
@@ -267,7 +287,11 @@
             {% if tasks.has_next %}
                 <ul>
                     <li>
-                        <a href="{% url "analyses.views.show_case" case.id "others" %}?page={{ tasks.next_page_number }}">Next → </a>
+                        {% if filtered %}
+                            <a href="{% url "analyses.views.show_case" case.id "others" %}?page={{ tasks.next_page_number }}&filter=completed">Next → </a>
+                        {% else %}
+                            <a href="{% url "analyses.views.show_case" case.id "others" %}?page={{ tasks.next_page_number }}">Next → </a>
+                        {% endif %}
                     </li>
                 </ul>
             {% endif %}
