Fixed name, dashboard was empty

--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -117,7 +117,7 @@
                                                 {% if anal.file_name|length > 60 %}
                                                     {{ anal.file_name|slice:":60" }} ...
                                                 {% else %}
-                                                    {{ case.name }}
+                                                    {{ anal.file_name }}
                                                 {% endif %}
                                             </a>
                                         </td>
