--- a/templates/analyses/cases/_thum_image.html
+++ b/templates/analyses/cases/_thum_image.html
@@ -28,11 +28,11 @@
                     <div class="tools">
                         <a href="{% url "analyses.views.show_analysis" image.id %}" title="Show report"> <i class="icon-list-alt"> </i></a>
                         {% if image.favorites.all %}
-                            <a id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" class="favorite btn-warning star{{image.id}}"> <i class="icon-star"> </i></a>
+                            <a id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" class="favorite btn-warning star{{image.id}}" title="Un-set as favorite"> <i class="icon-star"> </i></a>
                         {% else %}
-                            <a id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" class="favorite star{{image.id}}"> <i class="icon-star"> </i></a>
+                            <a id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" class="favorite star{{image.id}}" title="Set as favorite"> <i class="icon-star"> </i></a>
                         {% endif %}
-                        <a class="fancybox" href="{% url "analyses.views.image" image.image_id %}" title="{{ image.file_name }}"><i class="icon-picture"> </i></a>
+                        <a class="fancybox" href="{% url "analyses.views.image" image.image_id %}" title="View image: {{ image.file_name }}"><i class="icon-picture"> </i></a>
                     </div>
                 {% else %}
                     <img src="{{ STATIC_URL }}img/no_image_large.jpg" />
