Added breadcrumb home icon in dashboard page

--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -9,7 +9,7 @@
         </div>
         <div class="content-breadcrumb">
             <ul class="breadcrumb">
-                <li class="active">
+                <li class="active icon-home">
                     Dashboard
                 </li>
             </ul>
