Modified placeholder in search form

--- a/templates/layout/_searchForm.html
+++ b/templates/layout/_searchForm.html
@@ -111,9 +111,9 @@
             <div class="control-group">
                 <label class="control-label" for="metadata">Location</label>
                 <div class="controls">
-                    <input id="lat" type="text" name="lat" value="LATITUDE" class="height-large input-small-three" onfocus="if(this.value == 'LATITUDE') { this.value = ''; }" onblur="if(this.value == '') { this.value = 'LATITUDE'; }">
-                    <input id="long" type="text" name="long" value="LONGITUDE" class="height-large input-small-three" onfocus="if(this.value == 'LONGITUDE') { this.value = ''; }" onblur="if(this.value == '') { this.value = 'LONGITUDE'; }">
-                    <input id="dist" type="text" name="dist" value="MAX DISTANCE" class="height-large input-small-three" onfocus="if(this.value == 'MAX DISTANCE') { this.value = ''; }" onblur="if(this.value == '') { this.value = 'MAX DISTANCE'; }">
+                    <input id="lat" type="text" name="lat" placeholder="LATITUDE" class="height-large input-small-three">
+                    <input id="long" type="text" name="long" placeholder="LONGITUDE" class="height-large input-small-three">
+                    <input id="dist" type="text" name="dist" placeholder="MAX DISTANCE" class="height-large input-small-three">
                     <a href="#" data-trigger="hover" class="pop" data-toggle="popover" title="Search by location" data-content="Search for photos near this point.">
                         <span class="badge badge-info"><i class="icon-info"></i></span>
                     </a>
