--- a/templates/layout/_searchForm.html
+++ b/templates/layout/_searchForm.html
@@ -114,6 +114,10 @@
                     <input id="lat" type="text" name="lat" placeholder="LATITUDE" class="height-large input-small-three">
                     <input id="long" type="text" name="long" placeholder="LONGITUDE" class="height-large input-small-three">
                     <input id="dist" type="text" name="dist" placeholder="MAX DISTANCE" class="height-large input-small-three">
+                    {# Detects if the search form is called inside a case or not. (Search scope) #}
+                    {% if in_case_id %}
+                        <input type="hidden" value="{{ case.id }}" name="in_case" id="in_case">
+                    {% else %}
                     <a href="#" data-trigger="hover" class="pop" data-toggle="popover" title="Search by location" data-content="Search for photos near this point.">
                         <span class="badge badge-info"><i class="icon-info"></i></span>
                     </a>
